--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,4 +20,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo hello
+          git clone https://{{SECERTS.GHT}}@github.com/lucifermoningstar007/code
+          cd code;python3 test.py
