--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,5 +20,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          git clone https://{{secrets.GHT}}@github.com/lucifermoningstar007/code
+          git clone https://${{secrets.GHT}}@github.com/lucifermoningstar007/code
           cd code;python3 test.py
