--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
-
+  schedule:
+  - cron: "30 12 * * *"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
