--- a/.github/workflows/workflow2.yaml
+++ b/.github/workflows/workflow2.yaml
@@ -20,6 +20,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Performs the task
         run: |
-          pip3 install -r requirements.txt
           git clone https://${{secrets.GHT}}@github.com/lucifermoningstar007/code1
-          cd code1;python3 test.py
+          cd code1;pip3 install -r requirements.txt;python3 test.py
