--- a/.github/workflows/workflow2.yaml
+++ b/.github/workflows/workflow2.yaml
@@ -4,8 +4,8 @@ name: CIG
 
 # Controls when the workflow will run
 on:
-  schedule:
-   - cron: "30 08 * * *"
+  #schedule:
+  # - cron: "30 08 * * *"
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
